--- a/Zoomcar/Base.lproj/Main.storyboard
+++ b/Zoomcar/Base.lproj/Main.storyboard
@@ -689,9 +689,9 @@
                     <window key="window" title="Zoom" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" titlebarAppearsTransparent="YES" titleVisibility="hidden" id="IQv-IB-iLA">
                         <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
                         <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-                        <rect key="contentRect" x="196" y="240" width="1200" height="650"/>
+                        <rect key="contentRect" x="196" y="240" width="1200" height="750"/>
                         <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
-                        <value key="minSize" type="size" width="1200" height="650"/>
+                        <value key="minSize" type="size" width="1200" height="750"/>
                         <toolbar key="toolbar" implicitIdentifier="95A95A1E-18E0-49D7-B32F-6CB9FB8DA521" autosavesConfiguration="NO" displayMode="iconAndLabel" sizeMode="regular" id="NuY-My-t1v">
                             <allowedToolbarItems>
                                 <toolbarItem implicitItemIdentifier="NSToolbarShowColorsItem" id="Iee-i3-7EI"/>
@@ -728,21 +728,21 @@
                 </windowController>
                 <customObject id="Oky-zY-oP4" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="166" y="422"/>
+            <point key="canvasLocation" x="165" y="472"/>
         </scene>
         <!--Car View Controller-->
         <scene sceneID="ofu-tJ-d6b">
             <objects>
                 <viewController storyboardIdentifier="car" id="kM7-md-kS3" customClass="CarViewController" customModule="Zoomcar" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="aKI-or-vuy">
-                        <rect key="frame" x="0.0" y="0.0" width="1250" height="711"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1250" height="661"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <customView translatesAutoresizingMaskIntoConstraints="NO" id="Ycy-8J-4wK">
-                                <rect key="frame" x="0.0" y="0.0" width="1250" height="651"/>
+                                <rect key="frame" x="0.0" y="0.0" width="1250" height="601"/>
                                 <subviews>
                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="sPt-PI-vyM">
-                                        <rect key="frame" x="410" y="316" width="431" height="19"/>
+                                        <rect key="frame" x="410" y="291" width="431" height="19"/>
                                         <textFieldCell key="cell" lineBreakMode="clipping" title="There are no cars available on your selected time and location." id="VIe-jI-8rS">
                                             <font key="font" metaFont="system" size="15"/>
                                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -756,13 +756,13 @@
                                 </constraints>
                             </customView>
                             <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="505" horizontalPageScroll="10" verticalLineScroll="505" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PUw-IU-hzL">
-                                <rect key="frame" x="0.0" y="0.0" width="1250" height="591"/>
+                                <rect key="frame" x="0.0" y="0.0" width="1250" height="541"/>
                                 <clipView key="contentView" drawsBackground="NO" id="QyR-dr-Ozc">
-                                    <rect key="frame" x="0.0" y="0.0" width="1250" height="591"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="1250" height="541"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowHeight="480" rowSizeStyle="automatic" viewBased="YES" id="exf-T7-Int">
-                                            <rect key="frame" x="0.0" y="0.0" width="1250" height="591"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="1250" height="541"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                             <size key="intercellSpacing" width="100" height="25"/>
                                             <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -1792,7 +1792,7 @@
                                 </scroller>
                             </scrollView>
                             <customView appearanceType="aqua" translatesAutoresizingMaskIntoConstraints="NO" id="OLk-mB-PiQ">
-                                <rect key="frame" x="0.0" y="651" width="1250" height="60"/>
+                                <rect key="frame" x="0.0" y="601" width="1250" height="60"/>
                                 <subviews>
                                     <datePicker verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="r47-KW-9Ny">
                                         <rect key="frame" x="166" y="19" width="196" height="27"/>
@@ -1896,7 +1896,7 @@
                                 </constraints>
                             </customView>
                             <customView translatesAutoresizingMaskIntoConstraints="NO" id="fET-K5-TKH">
-                                <rect key="frame" x="0.0" y="608" width="1250" height="42"/>
+                                <rect key="frame" x="0.0" y="558" width="1250" height="42"/>
                                 <subviews>
                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="rJf-3U-wcE">
                                         <rect key="frame" x="62" y="13" width="64" height="18"/>
@@ -2805,6 +2805,20 @@
                                                 <view key="view" id="74P-tE-LPh">
                                                     <rect key="frame" x="0.0" y="0.0" width="707" height="552"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                    <subviews>
+                                                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="CnY-7F-RNc">
+                                                            <rect key="frame" x="274" y="500" width="160" height="22"/>
+                                                            <textFieldCell key="cell" lineBreakMode="clipping" title="Booking Confirmed" id="d6d-Le-gOY">
+                                                                <font key="font" metaFont="system" size="18"/>
+                                                                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                                            </textFieldCell>
+                                                        </textField>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="CnY-7F-RNc" firstAttribute="top" secondItem="74P-tE-LPh" secondAttribute="top" constant="30" id="7uC-Ut-08s"/>
+                                                        <constraint firstItem="CnY-7F-RNc" firstAttribute="centerX" secondItem="74P-tE-LPh" secondAttribute="centerX" id="UVO-x4-NrJ"/>
+                                                    </constraints>
                                                 </view>
                                             </tabViewItem>
                                         </tabViewItems>
